# tk_2424

./: .gitignore  README.md
admin_panel/: admin_README  func.py  garbage.csv  garbage_cans.csv  rand.py  requirements.txt  sample_cans.csv  sample_garbage.csv  streamlit.py
backend/: .env.sample  .gitignore  README.md  app.py  docker-compose.yml  dockerfile  makefile  pyproject.toml
backend/data/: status.json
backend/db/: db.py  garbage_cans.csv  ゴミ箱位置.csv
backend/db/test/: garbage_cans.csv  garbages.csv  test.py
backend/model/: test.py  train.py  yolo.py
backend/yolo/: .gitignore  classes.txt  datasets.yml  yolo_predict.py  yolo_train.py
backend/yolo/datasets/: .gitignore  rename.py
frontend/: .env.development  .env.production  .env.test  .eslintrc.json  app.config.ts  app.json  package-lock.json  package.json  tsconfig.json
frontend/assets/data/: character.ts  trash.ts  trashCan.ts  trush.ts  trushCan.ts
frontend/src/api/: fetchGarbage.ts  fetchGarbageCans.ts  fetchJudgeByImage.ts  fetchPredictionByImage.ts
frontend/src/components/BossMarker/: BeatButton.tsx  BossMarker.tsx  BossModal.tsx  index.ts
frontend/src/components/CameraButton/: CameraButton.tsx  index.ts
frontend/src/components/Characters/: Characters.tsx
frontend/src/components/ConditionsButton/: ConditionsButton.tsx  index.ts
frontend/src/components/DiscardButton/: DiscardButton.tsx  index.ts
frontend/src/components/DiscardModal/: DiscardModal.tsx  index.ts
frontend/src/components/LevelBar/: LevelBar.tsx  index.ts
frontend/src/libs/: axios.ts
frontend/src/theme/: colors.ts  images.ts
(+20 files in other folders)
